# app/model/admin/gen_admin.go
@@ -22,6 +22,10 @@ type Admin struct {
 	Class string
 }
 
+func init() {
+	model_common.Tables = append(model_common.Tables, &Admin{})
+}
+
 // NewAdmin new
 func NewAdmin() *Admin {
 	return new(Admin)
@@ -48,7 +52,7 @@ func (t *Admin) Delete(dbs ...*gorm.DB) (err error) {
 
 // Updates update record
 func (t *Admin) Updates(m map[string]interface{}, dbs ...*gorm.DB) (err error) {
-	if err = model_common.GetDB(dbs...).Model(t).Where("id = ?", t.ID).Updates(m).Error; err != nil {
+	if err = model_common.GetDB(dbs...).Model(t).Updates(m).Error; err != nil {
 		model_common.ModelLog.Errorln(err)
 		err = ErrUpdateAdmin
 		return
@@ -96,9 +100,9 @@ func AddAdminBatch(datas []*Admin, dbs ...*gorm.DB) (err error) {
 type QueryAdminForm struct {
 	CreatedAt *model_common.FieldData `json:"createdAt" form:"createdAt"` // if required, add binding:"required" to tag by self
 	UpdatedAt *model_common.FieldData `json:"updatedAt" form:"updatedAt"` // if required, add binding:"required" to tag by self
-	Name      *model_common.FieldData `json:"name" form:"name"`           // if required, add binding:"required" to tag by self
+	Name      *string                 `json:"name" form:"name"`           // if required, add binding:"required" to tag by self
 	Age       *model_common.FieldData `json:"age" form:"age"`             // if required, add binding:"required" to tag by self
-	Class     *model_common.FieldData `json:"class" form:"class"`         // if required, add binding:"required" to tag by self
+	Class     *string                 `json:"class" form:"class"`         // if required, add binding:"required" to tag by self
 
 	Order    []string `json:"order" form:"order"`
 	PageNum  int      `json:"pageNum" form:"pageNum" binding:"required"`
@@ -125,21 +129,25 @@ func GetAdminList(q *QueryAdminForm, dbs ...*gorm.DB) (ret []*Admin, err error) 
 		q.PageNum = (q.PageNum - 1) * q.PageSize
 		db = db.Offset(q.PageNum)
 	}
+
 	if q.CreatedAt != nil {
 		db = db.Where("created_at"+q.CreatedAt.Symbol+"?", q.CreatedAt.Value)
 	}
+
 	if q.UpdatedAt != nil {
 		db = db.Where("updated_at"+q.UpdatedAt.Symbol+"?", q.UpdatedAt.Value)
 	}
 	if q.Name != nil {
-		db = db.Where("name"+q.Name.Symbol+"?", q.Name.Value)
+		db = db.Where("name = ?", *q.Name)
 	}
+
 	if q.Age != nil {
 		db = db.Where("age"+q.Age.Symbol+"?", q.Age.Value)
 	}
 	if q.Class != nil {
-		db = db.Where("class"+q.Class.Symbol+"?", q.Class.Value)
+		db = db.Where("class = ?", *q.Class)
 	}
+
 	if err = db.Find(&ret).Error; err != nil {
 		return
 	}
@@ -154,7 +162,7 @@ func (t *Admin) SetQueryByID(id uint) *Admin {
 
 // GetByID get one record by ID
 func (t *Admin) GetByID(dbs ...*gorm.DB) (err error) {
-	if err = model_common.GetDB(dbs...).First(t, "id = ?", t.ID).Error; err != nil {
+	if err = model_common.GetDB(dbs...).First(t).Error; err != nil {
 		model_common.ModelLog.Errorln(err)
 		err = ErrGetAdmin
 		return
@@ -164,7 +172,7 @@ func (t *Admin) GetByID(dbs ...*gorm.DB) (err error) {
 
 // DeleteByID delete record by ID
 func (t *Admin) DeleteByID(dbs ...*gorm.DB) (err error) {
-	if err = model_common.GetDB(dbs...).Delete(t, "id = ?", t.ID).Error; err != nil {
+	if err = model_common.GetDB(dbs...).Delete(t).Error; err != nil {
 		model_common.ModelLog.Errorln(err)
 		err = ErrDeleteAdmin
 		return
